--- a/calculadoraIMC.html
+++ b/calculadoraIMC.html
@@ -5,8 +5,81 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
+    <!-- <link rel="stylesheet" href="calculadoraIMC.css"> -->
 </head>
-<body>
+<body class="background">
+
+    <div id="boasVindas">
+        <h1 id="texto">Calculadora IMC</h1>
+
+    </div>
+
+    <fieldset class=lateral>
+    <div class="descExercicio">
+        <h2>Legenda</h2>
+
+        <h3 id="descExercicio">
+            Resultado abaixo de 17 - Muito abaixo do peso; <br><br>
+            Resultado entre 17 e 18,49 - Abaixo do peso; <br><br>
+            Resultado entre 18,5 e 24,99 - Peso ideal; <br><br>
+            Resultado entre 25 e 29,99 - Sobrepeso; <br><br>
+            Resultado entre 30 e 34,9 - Obesidade grau I;<br><br>
+            Resultado entre 35 e 39,9 - Obesidade grau II (severa); <br><br>
+            Resultado acima de 40 - Obesidade grau III (mórbida); <br><br>
+
+        </h3>
+    </div>
+    </fieldset>
+    <br><br>
+    <fieldset class="centro">
+    <form onsubmit="return calcular(event)">
+
+        <h2>Informação da primeira pessoa</h2>
+        <label >Digite seu nome : </label><br><br>
+        <input type="text" name="nome" id="nome" placeholder="Digite seu nome" /><br><br>
+        <label >Digite seu Peso : </label><br><br>
+        <input type="text" name="peso" id="peso" placeholder="Exemplo: 65" /><br><br>
+
+        <label > Digite sua altura: </label><br><br>
+        <input type="text" name="altura" id="altura" placeholder="Exemplo: 1.90" /><br><br>
+
+        <div id="resultado1"></div>
+
+        <br><br>
+        <h2>Informação da segunda pessoa</h2>
+
+        <label >Digite seu nome : </label><br><br>
+        <input type="text" name="nome2" id="nome2" placeholder="Digite seu nome" /><br><br>
+        <label >Digite seu Peso : </label><br><br>
+        <input type="text" name="peso2" id="peso2" placeholder="Exemplo: 65" /><br><br>
+
+        <label > Digite sua altura: </label><br><br>
+        <input type="text" name="altura2" id="altura2" placeholder="Exemplo: 1.90" /><br><br>
+
+        <div id="resultado2"></div>
+
+        <br><br>
+
+        <h2>Informação da terceira pessoa</h2>
+
+        <label >Digite seu nome : </label><br><br>
+        <input type="text" name="nome3" id="nome3" placeholder="Digite seu nome" /><br><br>
+        <label >Digite seu Peso : </label><br><br>
+        <input type="text" name="peso3" id="peso3" placeholder="Exemplo: 65" /><br><br>
+
+        <label > Digite sua altura: </label><br><br>
+        <input type="text" name="altura3" id="altura3" placeholder="Exemplo: 1.90" /><br><br>
+
+        <input type="submit" value="Calcular IMC">
+
+        <div id="resultado3"></div>
+
+    </form>
+
+    
+</fieldset>
+    <script src="calculadoraIMC.js"></script>
+
     
 </body>
 </html>
